trunk/Archive2/2c/1391e368e41cdf/output
main.cpp:11:25: error: no member named 'convert_to' in 'boost::multiprecision::detail::expression<boost::multiprecision::detail::multiplies, boost::multiprecision::detail::expression<boost::multiprecision::detail::multiply_immediates, boost::multiprecision::number<boost::multiprecision::backends::gmp_int, 1>, boost::multiprecision::number<boost::multiprecision::backends::gmp_int, 1>, void, void>, boost::multiprecision::number<boost::multiprecision::backends::gmp_int, 1>, void, void>'
    cpp_int i = (z*z*z).convert_to<cpp_int>();
                ~~~~~~~ ^
main.cpp:11:36: error: unexpected type name 'cpp_int': expected expression
    cpp_int i = (z*z*z).convert_to<cpp_int>();
                                   ^
main.cpp:11:45: error: expected expression
    cpp_int i = (z*z*z).convert_to<cpp_int>();
                                            ^
3 errors generated.
